--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -231,6 +231,7 @@
                 <div class="calculador">
                     <input type="text" placeholder="Código postal">
                     <button type="button"><i class="fa-solid fa-truck"></i></button>
+                    <!--Me gustaría poner un input del domicilio-->
                 </div>
 
             </div>
