--- a/public/css/styleregistro.css
+++ b/public/css/styleregistro.css
@@ -3,20 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    font-family: arial;
-    background-image: url('/images/fondo_login_register.jpg');
+
+:root {
+    --azulOscuro: rgb(32, 33, 65);
+    --purpuraOscuro: #46188c;
+    --negro: rgba(0, 0, 0, 0.8);
+    --grisOscuro: #666;
+    --grisClaro: #ebebeb;
 }
 
-.Form-register{
+body{
+    font-family:'Montserrat', sans-serif;
+    background-image: url('/images/fondo_login_register.jpg');
+ 
+}
+
+.Form-register{    
 width: 400px;
-background: #24303c;
+background: var(--grisOscuro);
 padding: 30px;
 margin: auto;
 margin-top: 100px;
-border-radius: 4px;
+border-radius: 5px;
 font-family: 'calibri';
-color: white;
+color:var(--grisClaro);
 box-shadow: 7px 13px 37px #000;
 }
 
@@ -32,10 +42,10 @@ box-shadow: 7px 13px 37px #000;
     padding: 10px;
     border-radius: 4px;
     margin-bottom: 16px;
-    border: 1px solid #1f53c5;
+    border: 1px solid var(--purpuraOscuro);
     font-family: 'calibri';
     font-size: 18px;
-    color: white;
+    color: var(--grisClaro);
 }
 
 .Form-register p{
@@ -46,33 +56,28 @@ box-shadow: 7px 13px 37px #000;
 }
 
 .Form-register a{
-    color: white;
+    color: var(--grisClaro);
     text-decoration: none;
 }
 
 .Form-register a:hover{
-    color: white;
+    color: var(--grisClaro);
     text-decoration: underline;
 }
 
 .Form-register .botons {
     width: 100%;
-    background: #1f53c5;
+    background: var(--purpuraOscuro);
     border: none;
     padding: 12px;
-    color: white;
+    color: var(--grisClaro);
     margin: 16px 0;
     font-size: 16px;
     text-align: center;
 }
 
-body{
-    font-family: sans-serif;
-    padding: 90px 20px 0;
-}
-
-/* .header{
-    background-color: white;
+.header{
+    background-color: var(--azulOscuro);
     height: 80px;
     position: fixed;
     width: 100%;
@@ -89,7 +94,7 @@ body{
     }
 
 .nav-link{
-    color: black;
+    color: var(--grisClaro);
     text-decoration: none;
 
 }
@@ -119,12 +124,12 @@ body{
     border-radius: 3px;
 }
 .nav-menu-link:hover{
-    background-color: #034574;
+    background-color: var(--azulOscuro);
     transition: 0.5s;
 }
 
 .nav-toggle {
-    color : black;
+    color : var(--grisClaro);
     background:none;
     font-size: 30px;
     padding: 0 20px;
@@ -133,13 +138,13 @@ body{
     display: none;
     border-radius: 10px; 
     border: none;
-} */
+} 
 
-@media(max-width: 768px){
+@media(max-width: 521px){
     body{
-        padding: 90px 20px 0;
+        font-size: 18px;
     }
-/*     
+     
     .header{
         height: 60px;       
     }
@@ -167,5 +172,39 @@ body{
     
     .nav-toggle {
         display: block;
-    } */
+    } 
+}
+@media(max-width: 769px){
+    body{
+        font-size: 22px;
+    }
+     
+    .header{
+        height: 60px;       
+    }
+    .logo {
+        font-size: 25px;
+        padding: 0 20px;
+        line-height: 60px;
+        align-items: center; 
+    }
+    
+    .nav-menu {
+        display: none;
+        margin-right: 20px;
+        height: calc(100% - 60%);
+        overflow-y: auto;
+    }
+    
+    .nav-menu-item{
+        line-height: 70px;
+    }
+
+    .nav-menu-link:hover{
+        background-color: none;
+    }
+    
+    .nav-toggle {
+        display: block;
+    } 
 }
