--- a/public/css/styleproductDetail.css
+++ b/public/css/styleproductDetail.css
@@ -5,8 +5,9 @@
 /*Body*/
 body{
     font-family: 'Montserrat', sans-serif;
-    font-size: 15px;}
-
+    font-size: 15px;
+}
+    
 
 /*Nav-bar*/
 
@@ -19,7 +20,7 @@ main{
     width: 90%;
     margin: auto;
     position: relative;
-    top: 10vh;
+    margin-top: 5%;
 }
 
 
@@ -30,6 +31,11 @@ div.caja-titulo{
 h2.producto{font-size: 20px;
     padding-top: 10px;
     text-align: center;}
+
+.caja-producto{
+margin-top: 5%;
+}
+
 
 /*Fotos*/
 .foto-2{display:none;}
@@ -107,14 +113,14 @@ div .boton-flotante{
     right: 40px;
     z-index: 5;
 }
-.fa-cart-shopping{
+/*.fa-cart-shopping{
     position: fixed;
     top: 527px;
     right: 53px;
     z-index: 10; 
     padding: auto;
     font-size: 30px;
-}
+}*/
 
 
 /* Botones*/
@@ -140,7 +146,6 @@ div .boton-flotante{
     margin-top: 50px
  }
  .caja-similares{
-     height: 350px;
  }
 .similarestitu{font-size: 30px;
     margin: 0px 0px 0px 35px;}
@@ -172,15 +177,11 @@ div.articulo{
 }
 
 
+
 /*Responsive*/
-@media (min-width: 480px){
-.foto-2{display: block;}
-.foto-3{display: block;}
-.foto-4{display: block;}
-.foto-5{display: block;}
-}
-/*--------------------------------------MediaQuery Desktop-----------------------------------*/
-@media (min-width: 781px){
+
+/*-------------------------------------MediaQuery Desktop-----------------------------------*/
+@media (min-width: 769px){
 main{
 width: 90%;
 margin: auto;
@@ -192,7 +193,7 @@ div.caja-titulo{
 .caja-articulo{
 display: flex;
 width: 100%;
-margin: auto;
+margin-top: 20%;
 
 }
 .fotos-muestra{
@@ -244,7 +245,6 @@ width: 15%;
     margin: 0;
 }
 .caja-compra{ 
-
 }
 .valor{font-size: 40px;
     font-weight: bold;
@@ -331,6 +331,7 @@ div.articulo{
     right: 40px;
     z-index: 5;
 }
+/*
 .fa-cart-shopping{
     position: fixed;
     top: 497px;
@@ -339,6 +340,7 @@ div.articulo{
     padding: auto;
     font-size: 30px;
 }
+*/
 .producto2{
     display: inherit;
     padding-top: 4%;
@@ -346,18 +348,183 @@ div.articulo{
 }
 
     }
-/*MediaQuery Tablet*/
-@media (min-width: 950px){
-    .foto-2{display: block;}
-    .foto-3{display: block;}
-    .foto-4{display: block;}
-    .foto-5{display: block;} 
-    }
-
-    main {
-        position: relative;
-        top: 20vh;
-    }
+/*---------------------------------------->MediaQuery Tablet<----------------------------------*/
+@media (min-width: 520px){
+    main{
+        width: 90%;
+        margin: auto;
+        }
+        div.caja-titulo{
+            display: none;
+        }
+        
+        .caja-articulo{
+        display: flex;
+        width: 100%;
+        margin: auto;
+        justify-content: center;
+        
+        }
+        .fotos-muestra{
+        display: flex;
+        flex-direction: column;
+        width: 15%;
+        margin-left: 5%;
+        }
+        .foto-2{
+            width: 100%;
+        }
+        .foto-2 img {width: 100%;
+            border: solid 2px;
+        }
+        .foto-3{
+            width: 100%;
+        }
+        .foto-3 img{width: 100%;
+            border: solid 2px;
+        }
+        .foto-4{
+            width: 100%;
+        }
+        .foto-4 img{width: 100%;
+            border: solid 2px;
+        }
+        .foto-5{
+            width: 100%;
+        }
+        .foto-5 img {width: 100%;
+            border: solid 2px;
+        }
+        .caja-foto-principal{
+            width: 80%;
+            height: 60%;
+            order: 1;
+            padding: 0% 5%;
+        }
+        .contenedor-fotos-datos{
+        }
+        .contenedor-datos{
+            width: 100%;
+            ;
+        }
+        .caja-producto{
+            width: 90%;
+            margin-top: 5%;
+        }
+        .caja-compra{ 
+        
+        }
+        .valor{font-size: 40px;
+            font-weight: bold;
+            text-align: left;
+            margin-left: 5% ;
+        }
+        .cuotas{font-size: 20px;
+            text-align: 0;
+            margin: 0px 0px 0px 0px;
+            margin-left: 5% ;
+        }
+        
+        
+        .caja-carrito{
+            display: flex;
+            margin-left: 5% ;
+        }
+        .cantidad{font-size: 20px;
+            text-align: left;
+            margin: 0px 0px 0px 50px;}
+        
+        .agregar-carrito{font-size: 20px;
+            text-align: left;
+            margin: 0px 0px 0px 30px;}
+        
+        .caja-envio{font-size: 15px;
+            text-align: left;
+            margin-left: 5% ;
+        }
+        .envio{
+            margin-left: 0;
+        }
+        .texto-envio{
+            margin-left: 0;
+        }
+        .cantidad{
+            margin: 0;
+        }
+        .caja-botones{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 3%;
+            margin-left: 5% ;
+        }
+        .botondedescripcion,.botondeficha,.botondeopiniones{
+            width: 30%;
+        }
+        .caja-descripcion{
+            display: none;
+        }
+        
+        .caja-similares{
+            margin-top: 5% ;
+        }
+        .caja-similares img{
+            display: block;
+            margin: auto;
+        }
+        div.articulo{
+            width: 20%;
+            height: 250px;
+            box-shadow: 0px 0px 10px rgb(100, 100, 100);
+            position: static;
+            z-index: 0;
+            margin-top: 20px;
+        }
+        .articulo img{
+            width: 225 ;
+            height: 201;
+        }
+        .producto-similar1{text-align: center;
+            font-size: 15px;
+        }
+        .valor2{
+            font-size: 20px;
+            text-align: center;
+        }
+        .similares{
+            margin-top: 0;
+            display: flex;
+            width: 90%;
+            margin: auto;
+            justify-content: space-between;
+         }
+        
+         .boton-flotante img{
+            width: 60px;
+            height: 60px;
+            position: fixed;
+            top: 480px;
+            right: 40px;
+            z-index: 5;
+        }
+        
+        /*.fa-cart-shopping{
+            position: fixed;
+            top: 497px;
+            right: 53px;
+            z-index: 10; 
+            padding: auto;
+            font-size: 30px;
+        }
+        */
+        .producto2{
+            display: inherit;
+            padding-top: 4%;
+            text-align: left;
+            margin-left: 5% ;
+        }
+        
+            }
+    
 /*body {font-family: 'Roboto', sans-serif;}
 .foto-principal{
     width: 500px;
