--- a/src/views/register.html
+++ b/src/views/register.html
@@ -11,6 +11,8 @@
     <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/navbar-footer.css">
     <link rel="stylesheet" href="/css/styleregistro.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>register</title>
 </head>
 
@@ -102,7 +104,8 @@
 
     </header>
 
-    <section class="Form-register">
+    <main class="Form-register">
+        <form action="/" method="POST">
         <h4>Formulario de Registro</h4>
         <input class="Controls" type="text" name="Nombres" id="Nombres" placeholder="Ingrese su Nombre">
         <input class="Controls" type="text" name="Apellido" id="Apellido" placeholder="Ingrese su Apellido">
@@ -114,8 +117,8 @@
         <input class="Controls" type="text" name="Repetir Contraseña" id="Repetir Contraseña"
             placeholder="Repetir Contraseña">
         <p> Acepto los <a href="#">términos y condiciones</a></p>
-        <input class="botons" type="submit" value="Aceptar">
-    </section>
+        <input class="botons" type="submit" value="Aceptar"></form>
+    </main>
 
     <footer>
 
