--- a/public/css/stylelogin.css
+++ b/public/css/stylelogin.css
@@ -15,7 +15,11 @@ box-sizing: border-box;
 body{
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    background-image: url('/images/fondo_login_register.jpg');
+    background-image: url('/images/pexels-photo.jpg');
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
 .form-login{
